Thêm vẽ điểm, tam giác đều, sửa đoạn thẳng, ẩn trục Oz

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,10 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Presenhemline
 excludes=
+file.reference.AbsoluteLayout-RELEASE121.jar=C:\\Users\\Apple Bee\\Documents\\Ky thuat do hoa\\AbsoluteLayout-RELEASE121.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AbsoluteLayout-RELEASE121.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
