Clean code, xóa vài cái dư thừa

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Presenhemline
+application.vendor=Apple Bee
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,13 +33,12 @@ dist.jar=${dist.dir}/Presenhemline.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Presenhemline
+endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout-RELEASE121.jar=C:\\Users\\Apple Bee\\Documents\\Ky thuat do hoa\\AbsoluteLayout-RELEASE121.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.AbsoluteLayout-RELEASE121.jar}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
